--- a/static/css/partial/component/badge.sass
+++ b/static/css/partial/component/badge.sass
@@ -1,5 +1,15 @@
 @import 'base'
 
+%badge
+  padding:  .2em .5em
+  border-radius: 5px
+  font:
+    style: normal
+    size: .8rem
+    weight: 500
+
+
+
 .category-badge
   margin-block: 0
   padding: 0.25em .8em
@@ -17,3 +27,10 @@
   border-radius: 5px
   @include color-text('grey')
   @include color-background('brown-lighten-1')
+
+
+.badge
+  &\:grey
+    @extend %badge
+    @include color-background('grey')
+
