--- a/static/css/partial/component/card.sass
+++ b/static/css/partial/component/card.sass
@@ -36,9 +36,11 @@
       .thumbnail
         &.h-full
           width: 100%
+          max-height: 100%
 
         &.v-full
           height: 100%
+          max-width: 100%
 
         &-default
           font-size: 3rem
