--- a/static/css/partial/page/post-detail.sass
+++ b/static/css/partial/page/post-detail.sass
@@ -1,5 +1,15 @@
 @import 'layout/page'
 
+@mixin message($text-color, $icon-name)
+  font-size: .9rem
+  @include color-text($text-color, .65)
+
+  &:before
+    @include icon($icon-name)
+    margin-right: .5em
+
+
+
 .page.post-detail
   @extend %page-post
 
@@ -29,12 +39,10 @@
       border-style: dashed
 
     .info-message
-      font-size: .9rem
-      @include color-text('black-lighten-1', .65)
+      @include message('black-lighten-1', 'info')
 
-      &:before
-        @include icon('info')
-        margin-right: .5em
+    .warning-message
+      @include message('danger', 'warning')
 
     .info-wrapper
       padding: 1em 1.5em
