--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -36,7 +36,7 @@ type: post-list
 <script type="text/javascript">
     window.onload = () => {
         dddd.static.Search.renderResult({
-            data: JSON.parse('[{{ posts }}]'),
+            data: [{{ posts }}],
             renderOptions: {
                 dateFormat: 'yyyy'
             }
