--- a/static/css/partial/layout/page.sass
+++ b/static/css/partial/layout/page.sass
@@ -7,7 +7,7 @@
   word-break: keep-all
 
   .main
-    padding: 0 20%
+    padding: 0
 
     @media screen and (max-width: 768px)
       padding: 0 8%
@@ -23,6 +23,8 @@
     @include color-background('white')
     min-height: calc(100vh - 2.8em - 1.5rem - 0.8rem - 3em - 3rem)
     padding: 2em
+    margin: 0 auto
+    max-width: 1080px
     border:
       width: 0 1px
 
